toml-re2c.c
/* Generated by re2c 0.13.7.5 */
#line 1 "toml-re2c.re2c"
#define COUNTLINES \
  tokenData->end = p; \
  char *line = tokenData->start; \
  \
  line = strchr( line, '\n' ); \
  while ( line != NULL && line < tokenData->end ) { \
    tokenData->line++; \
    tokenData->lineStart = line + 1; \
  }
#define RETURNTOKEN( tokenid ) *token = tokenData->token = tokenid; \
  tokenData->end = p; \
  return tokenid != EOF

#define YYMARKER tokenData->marker
#define SKIP(x) { tokenData->start = p; goto yy0; }

int TOMLScan(char *p, int* token, TOMLToken *tokenData ) {
  tokenData->start = p;
yy0:

#line 24 "<stdout>"
{
	char yych;
	unsigned int yyaccept = 0;

	yych = *p;
	switch (yych) {
	case 0x00:	goto yy3;
	case '\t':
	case '\r':
	case ' ':	goto yy28;
	case '\n':	goto yy31;
	case '"':	goto yy23;
	case '#':	goto yy18;
	case ',':	goto yy13;
	case '-':	goto yy27;
	case '.':	goto yy9;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy25;
	case '=':	goto yy11;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	case '[':	goto yy5;
	case ']':	goto yy7;
	case 'f':	goto yy17;
	case 't':	goto yy15;
	default:	goto yy2;
	}
yy2:
	p = YYMARKER;
	if (yyaccept == 0) {
		goto yy26;
	} else {
		goto yy60;
	}
yy3:
	++p;
#line 40 "toml-re2c.re2c"
	{ RETURNTOKEN( EOF ); }
#line 120 "<stdout>"
yy5:
	++p;
#line 41 "toml-re2c.re2c"
	{ RETURNTOKEN( LEFT_SQUARE ); }
#line 125 "<stdout>"
yy7:
	++p;
#line 42 "toml-re2c.re2c"
	{ RETURNTOKEN( RIGHT_SQUARE ); }
#line 130 "<stdout>"
yy9:
	++p;
	switch ((yych = *p)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy36;
	default:	goto yy10;
	}
yy10:
#line 43 "toml-re2c.re2c"
	{ RETURNTOKEN( ID_DOT ); }
#line 149 "<stdout>"
yy11:
	++p;
#line 44 "toml-re2c.re2c"
	{ RETURNTOKEN( EQ ); }
#line 154 "<stdout>"
yy13:
	++p;
#line 45 "toml-re2c.re2c"
	{ RETURNTOKEN( COMMA ); }
#line 159 "<stdout>"
yy15:
	++p;
	switch ((yych = *p)) {
	case 'r':	goto yy72;
	default:	goto yy22;
	}
yy16:
#line 50 "toml-re2c.re2c"
	{ RETURNTOKEN( ID ); }
#line 169 "<stdout>"
yy17:
	yych = *++p;
	switch (yych) {
	case 'a':	goto yy67;
	default:	goto yy22;
	}
yy18:
	++p;
	yych = *p;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy20;
	default:	goto yy18;
	}
yy20:
#line 49 "toml-re2c.re2c"
	{ RETURNTOKEN( COMMENT ); }
#line 187 "<stdout>"
yy21:
	++p;
	yych = *p;
yy22:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy16;
	}
yy23:
	++p;
	yych = *p;
	switch (yych) {
	case 0x00:	goto yy59;
	case '"':	goto yy61;
	case '\\':	goto yy58;
	default:	goto yy23;
	}
yy25:
	yyaccept = 0;
	yych = *(YYMARKER = ++p);
	switch (yych) {
	case '.':	goto yy35;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy38;
	default:	goto yy26;
	}
yy26:
#line 58 "toml-re2c.re2c"
	{ RETURNTOKEN( NUMBER ); }
#line 287 "<stdout>"
yy27:
	yych = *++p;
	switch (yych) {
	case '.':	goto yy35;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy33;
	default:	goto yy2;
	}
yy28:
	++p;
	yych = *p;
	switch (yych) {
	case '\t':
	case '\r':
	case ' ':	goto yy28;
	default:	goto yy30;
	}
yy30:
#line 59 "toml-re2c.re2c"
	{ SKIP(); }
#line 316 "<stdout>"
yy31:
	++p;
#line 60 "toml-re2c.re2c"
	{ tokenData->line++; tokenData->lineStart = p; SKIP(); }
#line 321 "<stdout>"
yy33:
	yyaccept = 0;
	YYMARKER = ++p;
	yych = *p;
yy34:
	switch (yych) {
	case '.':	goto yy35;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy33;
	default:	goto yy26;
	}
yy35:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy36;
	default:	goto yy2;
	}
yy36:
	++p;
	yych = *p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy36;
	default:	goto yy26;
	}
yy38:
	yyaccept = 0;
	yych = *(YYMARKER = ++p);
	switch (yych) {
	case '.':	goto yy35;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy39;
	default:	goto yy26;
	}
yy39:
	yyaccept = 0;
	yych = *(YYMARKER = ++p);
	switch (yych) {
	case '.':	goto yy35;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy40;
	default:	goto yy26;
	}
yy40:
	yyaccept = 0;
	yych = *(YYMARKER = ++p);
	switch (yych) {
	case '-':	goto yy41;
	default:	goto yy34;
	}
yy41:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy42;
	default:	goto yy2;
	}
yy42:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy43;
	default:	goto yy2;
	}
yy43:
	yych = *++p;
	switch (yych) {
	case '-':	goto yy44;
	default:	goto yy2;
	}
yy44:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy45;
	default:	goto yy2;
	}
yy45:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy46;
	default:	goto yy2;
	}
yy46:
	yych = *++p;
	switch (yych) {
	case 'T':	goto yy47;
	default:	goto yy2;
	}
yy47:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy48;
	default:	goto yy2;
	}
yy48:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy49;
	default:	goto yy2;
	}
yy49:
	yych = *++p;
	switch (yych) {
	case ':':	goto yy50;
	default:	goto yy2;
	}
yy50:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy51;
	default:	goto yy2;
	}
yy51:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy52;
	default:	goto yy2;
	}
yy52:
	yych = *++p;
	switch (yych) {
	case ':':	goto yy53;
	default:	goto yy2;
	}
yy53:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy54;
	default:	goto yy2;
	}
yy54:
	yych = *++p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy55;
	default:	goto yy2;
	}
yy55:
	yych = *++p;
	switch (yych) {
	case 'Z':	goto yy56;
	default:	goto yy2;
	}
yy56:
	++p;
#line 55 "toml-re2c.re2c"
	{
    RETURNTOKEN( DATE );
  }
#line 599 "<stdout>"
yy58:
	++p;
	yych = *p;
	switch (yych) {
	case '"':
	case '/':
	case '\\':
	case 'b':
	case 'f':
	case 'n':
	case 'r':
	case 't':	goto yy23;
	case 'u':	goto yy63;
	default:	goto yy2;
	}
yy59:
	++p;
yy60:
#line 62 "toml-re2c.re2c"
	{
    COUNTLINES;
    RETURNTOKEN( EOF );
  }
#line 623 "<stdout>"
yy61:
	++p;
#line 51 "toml-re2c.re2c"
	{
    COUNTLINES;
    RETURNTOKEN( STRING );
  }
#line 631 "<stdout>"
yy63:
	++p;
	yych = *p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy64;
	default:	goto yy60;
	}
yy64:
	++p;
	yych = *p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy65;
	default:	goto yy60;
	}
yy65:
	++p;
	yych = *p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy66;
	default:	goto yy60;
	}
yy66:
	yyaccept = 1;
	YYMARKER = ++p;
	yych = *p;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy23;
	default:	goto yy60;
	}
yy67:
	yych = *++p;
	switch (yych) {
	case 'l':	goto yy68;
	default:	goto yy22;
	}
yy68:
	yych = *++p;
	switch (yych) {
	case 's':	goto yy69;
	default:	goto yy22;
	}
yy69:
	yych = *++p;
	switch (yych) {
	case 'e':	goto yy70;
	default:	goto yy22;
	}
yy70:
	++p;
	switch ((yych = *p)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy71;
	}
yy71:
#line 47 "toml-re2c.re2c"
	{ RETURNTOKEN( FALSE ); }
#line 834 "<stdout>"
yy72:
	yych = *++p;
	switch (yych) {
	case 'u':	goto yy73;
	default:	goto yy22;
	}
yy73:
	yych = *++p;
	switch (yych) {
	case 'e':	goto yy74;
	default:	goto yy22;
	}
yy74:
	++p;
	switch ((yych = *p)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy75;
	}
yy75:
#line 46 "toml-re2c.re2c"
	{ RETURNTOKEN( TRUE ); }
#line 918 "<stdout>"
}
#line 66 "toml-re2c.re2c"

}
